--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,5 +8,6 @@
 @theme {
     --color-white: #F5F5F5;
     --color-pastelpink: #FFC1E3;
-    --color-violet: #B388EB;
+    --color-violet: #61418B;
+    --color-black: #282C35;
 }
